chore: auto cleanup unused code, imports and old documentation
- Remove 26,675 lines of unused code and old docs
- Add 19,227 lines of cleaned and organized code
- Net reduction: 7,448 lines (~22%)

Python Service:
- Remove all unused imports with autoflake
- Organize imports with isort (PEP8 standard)
- Remove unused variables
- 40+ Python files cleaned

Documentation:
- Remove 38 old/unused MD files
- Keep only relevant documentation
- Reduce repository clutter

Java Services:
- Format code with Spotless
- Organize imports
- All 10 microservices checked

React/JavaScript:
- Identify unused variables (needs manual review)
- Warn about missing hook dependencies
- 30+ components need attention

Tools used: autoflake, isort, vulture, ESLint, depcheck, Maven
See CLEANUP-RESULT-REPORT.md for details